[gd_scene load_steps=11 format=3 uid="uid://c1fwa3ykfbx03"]

[ext_resource type="Script" path="res://controls.gd" id="1_7y0b7"]
[ext_resource type="Texture2D" uid="uid://dw2usjwer5caa" path="res://graphics/buttons/Button_Rotate_Right_50.png" id="1_ito4g"]
[ext_resource type="Texture2D" uid="uid://crr6n4a54b6nh" path="res://graphics/buttons/Button_Rotate_Right_100.png" id="2_kr5rg"]
[ext_resource type="Texture2D" uid="uid://b3t854o0su73p" path="res://graphics/buttons/Button_Rotate_Right_75.png" id="3_4yaxn"]
[ext_resource type="Texture2D" uid="uid://c5cakngawyrip" path="res://graphics/buttons/Button_Up_50.png" id="4_ebtjh"]
[ext_resource type="Texture2D" uid="uid://df41txglttp5s" path="res://graphics/buttons/Button_Up_100.png" id="5_pl27i"]
[ext_resource type="Texture2D" uid="uid://ddb8kw3gpta4v" path="res://graphics/buttons/Button_Up_75.png" id="6_v1onp"]
[ext_resource type="Texture2D" uid="uid://b1u5w7exkmlwy" path="res://graphics/buttons/Button_Right_50.png" id="7_3o7ac"]
[ext_resource type="Texture2D" uid="uid://cjbquih7hnayj" path="res://graphics/buttons/Button_Right_100.png" id="8_vc500"]
[ext_resource type="Texture2D" uid="uid://c47q5a7jxjrjb" path="res://graphics/buttons/Button_Right_75.png" id="9_t514y"]

[node name="Controls" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_7y0b7")

[node name="Rotate Right" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 3.25
offset_top = 0.249998
offset_right = 83.25
offset_bottom = 80.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_ito4g")
texture_pressed = ExtResource("2_kr5rg")
texture_hover = ExtResource("3_4yaxn")

[node name="Rotate Left" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 19.25
offset_top = 0.249998
offset_right = 99.25
offset_bottom = 80.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_ito4g")
texture_pressed = ExtResource("2_kr5rg")
texture_hover = ExtResource("3_4yaxn")
flip_h = true

[node name="Move Up" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 10.25
offset_top = 16.25
offset_right = 90.25
offset_bottom = 96.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_ebtjh")
texture_pressed = ExtResource("5_pl27i")
texture_hover = ExtResource("6_v1onp")

[node name="Move Down" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 10.25
offset_top = 34.25
offset_right = 90.25
offset_bottom = 114.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_ebtjh")
texture_pressed = ExtResource("5_pl27i")
texture_hover = ExtResource("6_v1onp")
flip_v = true

[node name="Move Left" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 0.250001
offset_top = 25.25
offset_right = 80.25
offset_bottom = 105.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_3o7ac")
texture_pressed = ExtResource("8_vc500")
texture_hover = ExtResource("9_t514y")
flip_h = true

[node name="Move Right" type="TextureButton" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 20.25
offset_top = 25.25
offset_right = 100.25
offset_bottom = 105.25
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_3o7ac")
texture_pressed = ExtResource("8_vc500")
texture_hover = ExtResource("9_t514y")

[connection signal="pressed" from="Rotate Right" to="." method="_on_rotate_right_pressed"]
[connection signal="pressed" from="Rotate Left" to="." method="_on_rotate_left_pressed"]
[connection signal="pressed" from="Move Up" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="Move Down" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="Move Left" to="." method="_on_move_left_pressed"]
[connection signal="pressed" from="Move Right" to="." method="_on_move_right_pressed"]
